[gd_scene load_steps=10 format=2]

[ext_resource path="res://objects/main_menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://objects/main_menu/move.wav" type="AudioStream" id=2]
[ext_resource path="res://objects/main_menu/select.wav" type="AudioStream" id=3]
[ext_resource path="res://tiles/transition.png" type="Texture" id=4]
[ext_resource path="res://misc_assets/PressStart2P.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://gfx/gloops_head.png" type="Texture" id=6]

[sub_resource type="Animation" id=3]

resource_name = "move_down"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("cursor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 260, 212 ), Vector2( 260, 260 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "move_up"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("cursor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 260, 260 ), Vector2( 260, 212 ) ]
}

[sub_resource type="DynamicFont" id=2]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="CanvasLayer" type="CanvasLayer"]

layer = 5
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="sound_move" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="sound_select" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Sprite" type="Sprite" parent="." index="2"]

position = Vector2( 416, 224 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="anim" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/move_down = SubResource( 3 )
anims/move_up = SubResource( 4 )
blend_times = [  ]

[node name="Label2" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 72.0
margin_right = 320.0
margin_bottom = 372.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Gloop."
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="cursor" type="Sprite" parent="." index="5"]

position = Vector2( 260, 212 )
scale = Vector2( 5, 5 )
texture = ExtResource( 6 )
offset = Vector2( 8, 8 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="continue_label" type="Label" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_top = 240.0
margin_right = 556.0
margin_bottom = 440.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "continue"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_fonts" ]

[node name="new_game_label" type="Label" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_top = 288.0
margin_right = 556.0
margin_bottom = 488.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "new game"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]


